# filesystem-kind-rs

./: Cargo.toml  README.md
src/: freebsd.rs  lib.rs  linux.rs  macos.rs  windows.rs
