[package]
name = "filesystem-kind"
version = "0.2.0"
authors = ["Ryan Avella"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ryanavella/filesystem-kind-rs"
repository = "https://github.com/ryanavella/filesystem-kind-rs"
documentation = "https://docs.rs/filesystem-kind"
description = "Query the filesystem that a file resides on."
keywords = ["file", "file-system", "filesystem", "system"]
categories = ["filesystem"]
edition = "2021"
readme = "README.md"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.151"

[target.'cfg(unix)'.dependencies]
rustix = {version = "0.38.28", features = ["fs"]}

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["fileapi", "std"]

[dev-dependencies]
walkdir = "2"
